--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     button { padding: 15px; font-size: 18px; margin: 10px; background-color: #007bff; color: white; border: none; border-radius: 5px; }
     .form { display: none; flex-direction: column; gap: 10px; max-width: 90%; margin: 20px auto; }
     input, textarea, select { padding: 8px; font-size: 14px; }
-    #searchInput, #dateFilter, #reportType { padding: 10px; width: 80%; max-width: 300px; margin-bottom: 10px; }
+    #searchInput, #dateFilter, #reportType, #reportStartDate, #reportEndDate { padding: 10px; width: 80%; max-width: 300px; margin-bottom: 10px; }
     #statusList { text-align: left; }
     #signaturePad { border: 2px solid #000; background: #f0f0f0; width: 250px; height: 120px; margin: 10px auto; }
     #clearSignature { font-size: 14px; padding: 10px; background: #ff4444; }
@@ -137,6 +137,8 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       <option value="customerActivity">Customer Activity</option>
       <option value="groupSummary">Group Checkout Summary</option>
     </select>
+    <input id="reportStartDate" type="date" onchange="generateReport()" placeholder="Start Date">
+    <input id="reportEndDate" type="date" onchange="generateReport()" placeholder="End Date">
     <div id="reportOutput"></div>
   </div>
 
@@ -388,7 +390,9 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       toggleForms('reports');
       await loadHeadphones();
       document.getElementById('reportType').value = ''; // Reset report selection
-      document.getElementById('reportOutput').innerHTML = '<p>Select a report type to view details.</p>';
+      document.getElementById('reportStartDate').value = ''; // Reset start date
+      document.getElementById('reportEndDate').value = ''; // Reset end date
+      document.getElementById('reportOutput').innerHTML = '<p>Select a report type and date range to view details.</p>';
     }
 
     async function scanNFCStatus() {
@@ -944,6 +948,8 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
     // Reporting Functions
     function generateReport() {
       const reportType = document.getElementById('reportType').value;
+      const startDate = document.getElementById('reportStartDate').value;
+      const endDate = document.getElementById('reportEndDate').value || startDate; // Default to startDate if endDate is empty
       const output = document.getElementById('reportOutput');
       output.innerHTML = '';
 
@@ -956,11 +962,23 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
       const now = Date.now();
       const twelveHours = 12 * 60 * 60 * 1000;
 
+      // Filter by date range if provided
+      let filteredArray = headphoneArray;
+      if (startDate) {
+        const start = new Date(startDate).setHours(0, 0, 0, 0);
+        const end = new Date(endDate).setHours(23, 59, 59, 999);
+        filteredArray = headphoneArray.filter(hp => {
+          const hpDate = new Date(hp.agreement?.date).setHours(0, 0, 0, 0);
+          return hpDate >= start && hpDate <= end;
+        });
+      }
+
       switch (reportType) {
         case 'checkedOut':
-          const checkedOut = headphoneArray.filter(hp => hp.status === 'checked_out');
+          const checkedOut = filteredArray.filter(hp => hp.status === 'checked_out');
           output.innerHTML = `
             <h3>Currently Checked Out Headphones (${checkedOut.length})</h3>
+            <p>Date Range: ${startDate || 'All'} to ${endDate || 'All'}</p>
             <table>
               <thead>
                 <tr>
@@ -989,9 +1007,10 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           break;
 
         case 'overdue':
-          const overdue = headphoneArray.filter(hp => hp.status === 'checked_out' && (now - hp.agreement.timestamp > twelveHours));
+          const overdue = filteredArray.filter(hp => hp.status === 'checked_out' && (now - hp.agreement.timestamp > twelveHours));
           output.innerHTML = `
             <h3>Overdue Headphones (${overdue.length})</h3>
+            <p>Date Range: ${startDate || 'All'} to ${endDate || 'All'}</p>
             <table>
               <thead>
                 <tr>
@@ -1025,10 +1044,11 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           break;
 
         case 'revenue':
-          const charged = headphoneArray.filter(hp => hp.status === 'charged');
+          const charged = filteredArray.filter(hp => hp.status === 'charged');
           const totalRevenue = charged.length * 100; // $100 per charged headphone
           output.innerHTML = `
             <h3>Revenue Summary</h3>
+            <p>Date Range: ${startDate || 'All'} to ${endDate || 'All'}</p>
             <p>Total Revenue: $${totalRevenue.toFixed(2)}</p>
             <table>
               <thead>
@@ -1061,7 +1081,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
         case 'customerActivity':
           const customers = {};
-          headphoneArray.forEach(hp => {
+          filteredArray.forEach(hp => {
             const customerKey = `${hp.customer.name}|${hp.customer.email}|${hp.customer.phone}`;
             if (!customers[customerKey]) {
               customers[customerKey] = { name: hp.customer.name, email: hp.customer.email, phone: hp.customer.phone, checkouts: 0, headphones: [] };
@@ -1071,6 +1091,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           });
           output.innerHTML = `
             <h3>Customer Activity</h3>
+            <p>Date Range: ${startDate || 'All'} to ${endDate || 'All'}</p>
             <table>
               <thead>
                 <tr>
@@ -1098,7 +1119,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
 
         case 'groupSummary':
           const groups = {};
-          headphoneArray.forEach(hp => {
+          filteredArray.forEach(hp => {
             if (hp.groupId) {
               if (!groups[hp.groupId]) {
                 groups[hp.groupId] = { ids: [], customer: hp.customer, total: 0, checkedOut: 0, returned: 0, charged: 0 };
@@ -1112,6 +1133,7 @@ This agreement constitutes a legally binding contract. I acknowledge that I have
           });
           output.innerHTML = `
             <h3>Group Checkout Summary</h3>
+            <p>Date Range: ${startDate || 'All'} to ${endDate || 'All'}</p>
             <table>
               <thead>
                 <tr>
